manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: videos
  namespace: videos
  labels:
    app: videos
spec:
  replicas: 3
  selector:
    matchLabels:
      app: videos
  template:
    metadata:
      labels:
        app: videos
    spec:
      containers:
        - name: videos
          image: "trueberryless/videos"
          imagePullPolicy: Always
