manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: videos
  namespace: videos
  annotations:
    cert-manager.io/issuer: acme-issuer
spec:
  selector:
    app: videos
  ports:
    - name: http
      port: 80
